updated subscription resource

--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+2021-08-18  v0.0.5
+--------------------
+* Update to Subscription resource
+
 2021-04-20  v0.0.4
 --------------------
 * Compatibility with Rails 6
